# VR-Editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  build-ingamepatcher.ps1  readme.md  unit-tests.md  vcpkg-configuration.json  vcpkg.json
Tests/: TestStubs.h  test_placeholder.cpp
assets/icons/: convert_to_dds.py  recolor_highlights.py
assets/icons/dds/: GradHighlight.dds  GradSelected.dds  HighlightFillTexture.dds  back.dds  back_highlight.dds  close.dds  close_highlight.dds  copy.dds  copy_highlight.dds  door.dds  door_highlight.dds  down.dds  down_highlight.dds  folder.dds  folder_highlight.dds  gallery.dds  gallery_highlight.dds  grid-reset-disabled.dds  grid-reset.dds  grid-reset_highlight.dds  group-move.dds  group-move_highlight.dds  keymap.dds  light.dds  light_highlight.dds  move.dds  move_highlight.dds  person-pin.dds  person-pin_highlight.dds  pin.dds  pin_highlight.dds  place-pin.dds  place-pin_highlight.dds  redo.dds  redo_highlight.dds  reset-filled.dds  reset-rotation.dds  reset-rotation_highlight.dds  rotate-left.dds  rotate-left_highlight.dds  (+19 more)
assets/icons/pngs/: kerymap.af
assets/icons/svg/: toadd.txt
cmake/: headerlist.cmake  sourcelist.cmake
include/: InGamePatcherAPI.h
src/: EditModeInputManager.cpp  EditModeInputManager.h  EditModeManager.cpp  EditModeManager.h  EditModeStateManager.cpp  EditModeStateManager.h  EditModeTransitioner.cpp  EditModeTransitioner.h  FrameCallbackDispatcher.cpp  FrameCallbackDispatcher.h  HealthCheck.cpp  HealthCheck.h  IFrameUpdateListener.h  TutorialManager.cpp  TutorialManager.h  log.h  plugin.cpp
src/actions/: Action.h  ActionHistoryRepository.cpp  ActionHistoryRepository.h  CopyHandler.h  DeleteHandler.h  ResetRotationHandler.h  SnapToGroundHandler.h  UndoRedoController.cpp  UndoRedoController.h
src/api/: InGamePatcherAPI.cpp  VRBuilderNativePapyrusAPI.cpp  VRBuilderNativePapyrusAPI.h  VREditorPapyrusAPI.cpp  VREditorPapyrusAPI.h
src/config/: ConfigOptions.cpp  ConfigOptions.h  ConfigStorage.cpp  ConfigStorage.h  ConfigStoragePapyrusAdapter.h
src/gallery/: GalleryItem.h  GalleryManager.cpp  GalleryManager.h  GalleryPlacementUtil.cpp  GalleryPlacementUtil.h
src/grab/: DeferredCollisionUpdateManager.cpp  DeferredCollisionUpdateManager.h  GroupMoveResolver.cpp  GroupMoveResolver.h  HandRotationTransformer.cpp  HandRotationTransformer.h  HandTranslationTransformer.cpp  HandTranslationTransformer.h  RemoteGrabController.cpp  RemoteGrabController.h  RemoteGrabTransformCalculator.cpp  RemoteGrabTransformCalculator.h  RemoteNPCPlacementManager.cpp  RemoteNPCPlacementManager.h  RemoteSelectionController.cpp  RemoteSelectionController.h  SnapToGridController.cpp  SnapToGridController.h  SphereSelectionController.cpp  SphereSelectionController.h  ThumbstickAccelerationHelper.cpp  ThumbstickAccelerationHelper.h  TransformSmoother.cpp  TransformSmoother.h
src/interfaces/: ThreeDUIInterface001.cpp  ThreeDUIInterface001.h  higgsinterface001.cpp  higgsinterface001.h
src/persistence/: AddedObjectsExporter.cpp  AddedObjectsExporter.h  AddedObjectsParser.cpp  AddedObjectsParser.h  AddedObjectsSpawner.cpp  AddedObjectsSpawner.h  BaseObjectSwapperExporter.cpp  BaseObjectSwapperExporter.h  BaseObjectSwapperParser.cpp  BaseObjectSwapperParser.h  ChangedObjectRegistry.cpp  ChangedObjectRegistry.h  CreatedObjectTracker.cpp  CreatedObjectTracker.h  EntryMetadata.cpp  EntryMetadata.h  FormKeyUtil.cpp  FormKeyUtil.h  SaveGameDataManager.cpp  SaveGameDataManager.h  SpriggitExporter.cpp  SpriggitExporter.h
src/selection/: ConsoleManager.cpp  ConsoleManager.h  DelayedHighlightRefreshManager.cpp  DelayedHighlightRefreshManager.h  HoverStateManager.cpp  HoverStateManager.h  ObjectFilter.cpp  ObjectFilter.h  SelectionState.cpp  SelectionState.h  SphereHoverStateManager.cpp  SphereHoverStateManager.h
src/test/: SaveFileTestManager.cpp  SaveFileTestManager.h
src/ui/: GalleryMenu.h  MenuStateManager.cpp  MenuStateManager.h  MenuViewportManager.h  SelectionMenu.h  SelectionMenuHelpers.h
src/util/: ActionLogger.cpp  ActionLogger.h  InputManager.cpp  InputManager.h  MenuChecker.cpp  MenuChecker.h  MessageBoxUtil.cpp  MessageBoxUtil.h  NotificationManager.cpp  NotificationManager.h  PositioningUtil.cpp  PositioningUtil.h  Raycast.cpp  Raycast.h  RotationMath.cpp  RotationMath.h  SelectionLogger.cpp  SelectionLogger.h  SkyrimNetInterface.cpp  SkyrimNetInterface.h  TouchingObjectsFinder.cpp  TouchingObjectsFinder.h  UUID.h  VRNodes.h
src/visuals/: ObjectHighlighter.cpp  ObjectHighlighter.h  RaycastRenderer.cpp  RaycastRenderer.h
